--- a/jade/sandbox.jade
+++ b/jade/sandbox.jade
@@ -31,18 +31,48 @@ block header
 
 block content
   .s-wrapper
+    .s-col
+      p
+        a.s-btn(href="#") Button
+        button.s-btn Button
+        input(type="submit" value="Button" class="s-btn")
     .s-col.s-md-6
       .s-box
-        img.s-box-caption_left(src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        img.s-box-caption_left(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
         .s-box-caption_right
           h3 Title
           p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     .s-col.s-md-6
       .s-box
-        img.s-box-caption_right(src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        img.s-box-caption_right(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
         .s-box-caption_left
           h3 Title
           p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-md-6
+      .s-box
+        img.s-box-caption_left(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        .s-box-caption_right
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-md-6
+      .s-box
+        img.s-box-caption_right(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        .s-box-caption_left
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-md-6
+      .s-box
+        img.s-box-caption_right(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        .s-box-caption_left
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-md-6
+      .s-box
+        img.s-box-caption_left(style="width: 128px" src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg")
+        .s-box-caption_right
+          h3 Title
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
     .s-col
       p To learn more, 
         a(href="#abc") Read this.
