--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -111,3 +111,7 @@ code, pre
 code
   margin-bottom: 0px
   padding: 0 ($buttonSpacingH/3)
+
+p.lead 
+  font-size: ($font-baseSize + 10)
+  line-height: ($font-baseLineHeight + 11)
