--- a/css/start.css
+++ b/css/start.css
@@ -326,8 +326,12 @@ code {
   margin-bottom: 0px;
   padding: 0 5.555555555555556px;
 }
+p.lead {
+  font-size: 26px;
+  line-height: 32px;
+}
 .s-wrapper {
-  padding: 25px;
+  padding: 12.5px;
   max-width: 1200px;
   display: block;
   margin: 0px auto;
@@ -357,249 +361,369 @@ code {
 .s-12 {
   width: 100%;
 }
+.s-12-offset {
+  margin-left: 100%;
+}
 .s-11 {
   width: 91.66666666666666%;
+}
+.s-11-offset {
+  margin-left: 91.66666666666666%;
 }
 .s-10 {
   width: 83.33333333333334%;
 }
+.s-10-offset {
+  margin-left: 83.33333333333334%;
+}
 .s-9 {
   width: 75%;
+}
+.s-9-offset {
+  margin-left: 75%;
 }
 .s-8 {
   width: 66.66666666666666%;
 }
+.s-8-offset {
+  margin-left: 66.66666666666666%;
+}
 .s-7 {
   width: 58.333333333333336%;
+}
+.s-7-offset {
+  margin-left: 58.333333333333336%;
 }
 .s-6 {
   width: 50%;
 }
+.s-6-offset {
+  margin-left: 50%;
+}
 .s-5 {
   width: 41.66666666666667%;
+}
+.s-5-offset {
+  margin-left: 41.66666666666667%;
 }
 .s-4 {
   width: 33.33333333333333%;
 }
+.s-4-offset {
+  margin-left: 33.33333333333333%;
+}
 .s-3 {
   width: 25%;
+}
+.s-3-offset {
+  margin-left: 25%;
 }
 .s-2 {
   width: 16.666666666666664%;
 }
+.s-2-offset {
+  margin-left: 16.666666666666664%;
+}
 .s-1 {
   width: 8.333333333333332%;
 }
-.s-1f {
-  width: 20%;
-}
-.s-2f {
-  width: 40%;
-}
-.s-3f {
-  width: 60%;
-}
-.s-4f {
-  width: 80%;
+.s-1-offset {
+  margin-left: 8.333333333333332%;
 }
 @media screen and (min-width: 768px) {
   .s-sm-12 {
     width: 100%;
   }
+  .s-sm-12-offset {
+    margin-left: 100%;
+  }
   .s-sm-11 {
     width: 91.66666666666666%;
+  }
+  .s-sm-11-offset {
+    margin-left: 91.66666666666666%;
   }
   .s-sm-10 {
     width: 83.33333333333334%;
   }
+  .s-sm-10-offset {
+    margin-left: 83.33333333333334%;
+  }
   .s-sm-9 {
     width: 75%;
+  }
+  .s-sm-9-offset {
+    margin-left: 75%;
   }
   .s-sm-8 {
     width: 66.66666666666666%;
   }
+  .s-sm-8-offset {
+    margin-left: 66.66666666666666%;
+  }
   .s-sm-7 {
     width: 58.333333333333336%;
+  }
+  .s-sm-7-offset {
+    margin-left: 58.333333333333336%;
   }
   .s-sm-6 {
     width: 50%;
   }
+  .s-sm-6-offset {
+    margin-left: 50%;
+  }
   .s-sm-5 {
     width: 41.66666666666667%;
+  }
+  .s-sm-5-offset {
+    margin-left: 41.66666666666667%;
   }
   .s-sm-4 {
     width: 33.33333333333333%;
   }
+  .s-sm-4-offset {
+    margin-left: 33.33333333333333%;
+  }
   .s-sm-3 {
     width: 25%;
+  }
+  .s-sm-3-offset {
+    margin-left: 25%;
   }
   .s-sm-2 {
     width: 16.666666666666664%;
   }
+  .s-sm-2-offset {
+    margin-left: 16.666666666666664%;
+  }
   .s-sm-1 {
     width: 8.333333333333332%;
   }
-  .s-sm-1f {
-    width: 20%;
-  }
-  .s-sm-2f {
-    width: 40%;
-  }
-  .s-sm-3f {
-    width: 60%;
-  }
-  .s-sm-4f {
-    width: 80%;
+  .s-sm-1-offset {
+    margin-left: 8.333333333333332%;
   }
 }
 @media screen and (min-width: 1024px) {
   .s-md-12 {
     width: 100%;
   }
+  .s-md-12-offset {
+    margin-left: 100%;
+  }
   .s-md-11 {
     width: 91.66666666666666%;
+  }
+  .s-md-11-offset {
+    margin-left: 91.66666666666666%;
   }
   .s-md-10 {
     width: 83.33333333333334%;
   }
+  .s-md-10-offset {
+    margin-left: 83.33333333333334%;
+  }
   .s-md-9 {
     width: 75%;
+  }
+  .s-md-9-offset {
+    margin-left: 75%;
   }
   .s-md-8 {
     width: 66.66666666666666%;
   }
+  .s-md-8-offset {
+    margin-left: 66.66666666666666%;
+  }
   .s-md-7 {
     width: 58.333333333333336%;
+  }
+  .s-md-7-offset {
+    margin-left: 58.333333333333336%;
   }
   .s-md-6 {
     width: 50%;
   }
+  .s-md-6-offset {
+    margin-left: 50%;
+  }
   .s-md-5 {
     width: 41.66666666666667%;
+  }
+  .s-md-5-offset {
+    margin-left: 41.66666666666667%;
   }
   .s-md-4 {
     width: 33.33333333333333%;
   }
+  .s-md-4-offset {
+    margin-left: 33.33333333333333%;
+  }
   .s-md-3 {
     width: 25%;
+  }
+  .s-md-3-offset {
+    margin-left: 25%;
   }
   .s-md-2 {
     width: 16.666666666666664%;
   }
+  .s-md-2-offset {
+    margin-left: 16.666666666666664%;
+  }
   .s-md-1 {
     width: 8.333333333333332%;
   }
-  .s-md-1f {
-    width: 20%;
-  }
-  .s-md-2f {
-    width: 40%;
-  }
-  .s-md-3f {
-    width: 60%;
-  }
-  .s-md-4f {
-    width: 80%;
+  .s-md-1-offset {
+    margin-left: 8.333333333333332%;
   }
 }
 @media screen and (min-width: 1200px) {
   .s-lg-12 {
     width: 100%;
   }
+  .s-lg-12-offset {
+    margin-left: 100%;
+  }
   .s-lg-11 {
     width: 91.66666666666666%;
+  }
+  .s-lg-11-offset {
+    margin-left: 91.66666666666666%;
   }
   .s-lg-10 {
     width: 83.33333333333334%;
   }
+  .s-lg-10-offset {
+    margin-left: 83.33333333333334%;
+  }
   .s-lg-9 {
     width: 75%;
+  }
+  .s-lg-9-offset {
+    margin-left: 75%;
   }
   .s-lg-8 {
     width: 66.66666666666666%;
   }
+  .s-lg-8-offset {
+    margin-left: 66.66666666666666%;
+  }
   .s-lg-7 {
     width: 58.333333333333336%;
+  }
+  .s-lg-7-offset {
+    margin-left: 58.333333333333336%;
   }
   .s-lg-6 {
     width: 50%;
   }
+  .s-lg-6-offset {
+    margin-left: 50%;
+  }
   .s-lg-5 {
     width: 41.66666666666667%;
+  }
+  .s-lg-5-offset {
+    margin-left: 41.66666666666667%;
   }
   .s-lg-4 {
     width: 33.33333333333333%;
   }
+  .s-lg-4-offset {
+    margin-left: 33.33333333333333%;
+  }
   .s-lg-3 {
     width: 25%;
+  }
+  .s-lg-3-offset {
+    margin-left: 25%;
   }
   .s-lg-2 {
     width: 16.666666666666664%;
   }
+  .s-lg-2-offset {
+    margin-left: 16.666666666666664%;
+  }
   .s-lg-1 {
     width: 8.333333333333332%;
   }
-  .s-lg-1f {
-    width: 20%;
-  }
-  .s-lg-2f {
-    width: 40%;
-  }
-  .s-lg-3f {
-    width: 60%;
-  }
-  .s-lg-4f {
-    width: 80%;
+  .s-lg-1-offset {
+    margin-left: 8.333333333333332%;
   }
 }
 @media screen and (min-width: 1700px) {
   .s-xl-12 {
     width: 100%;
   }
+  .s-xl-12-offset {
+    margin-left: 100%;
+  }
   .s-xl-11 {
     width: 91.66666666666666%;
+  }
+  .s-xl-11-offset {
+    margin-left: 91.66666666666666%;
   }
   .s-xl-10 {
     width: 83.33333333333334%;
   }
+  .s-xl-10-offset {
+    margin-left: 83.33333333333334%;
+  }
   .s-xl-9 {
     width: 75%;
+  }
+  .s-xl-9-offset {
+    margin-left: 75%;
   }
   .s-xl-8 {
     width: 66.66666666666666%;
   }
+  .s-xl-8-offset {
+    margin-left: 66.66666666666666%;
+  }
   .s-xl-7 {
     width: 58.333333333333336%;
+  }
+  .s-xl-7-offset {
+    margin-left: 58.333333333333336%;
   }
   .s-xl-6 {
     width: 50%;
   }
+  .s-xl-6-offset {
+    margin-left: 50%;
+  }
   .s-xl-5 {
     width: 41.66666666666667%;
+  }
+  .s-xl-5-offset {
+    margin-left: 41.66666666666667%;
   }
   .s-xl-4 {
     width: 33.33333333333333%;
   }
+  .s-xl-4-offset {
+    margin-left: 33.33333333333333%;
+  }
   .s-xl-3 {
     width: 25%;
+  }
+  .s-xl-3-offset {
+    margin-left: 25%;
   }
   .s-xl-2 {
     width: 16.666666666666664%;
   }
+  .s-xl-2-offset {
+    margin-left: 16.666666666666664%;
+  }
   .s-xl-1 {
     width: 8.333333333333332%;
   }
-  .s-xl-1f {
-    width: 20%;
-  }
-  .s-xl-2f {
-    width: 40%;
-  }
-  .s-xl-3f {
-    width: 60%;
-  }
-  .s-xl-4f {
-    width: 80%;
+  .s-xl-1-offset {
+    margin-left: 8.333333333333332%;
   }
 }
 @-webkit-keyframes fadeInDown {
