--- a/stylus/base/grid.styl
+++ b/stylus/base/grid.styl
@@ -1,5 +1,33 @@
-col(x=12)
-  width: (100% * (x/$columns))
+cols-and-offsets(cols)
+  width: (100% * (cols/$columns))
+  &-offset
+    margin-left: (100% * (cols/$columns))
+generate-cols()
+  &12
+    cols-and-offsets(12)
+  &11
+    cols-and-offsets(11)
+  &10
+    cols-and-offsets(10)
+  &9
+    cols-and-offsets(9)
+  &8
+    cols-and-offsets(8)
+  &7
+    cols-and-offsets(7)
+  &6
+    cols-and-offsets(6)
+  &5
+    cols-and-offsets(5)
+  &4
+    cols-and-offsets(4)
+  &3
+    cols-and-offsets(3)
+  &2
+    cols-and-offsets(2)
+  &1
+    cols-and-offsets(1)
+
 
 // Default XS
 
@@ -18,175 +46,20 @@ col(x=12)
     float: left
     box-sizing(border-box)
     width: 100%
-  &12
-    col(12)
-  &11
-    col(11)
-  &10
-    col(10)
-  &9
-    col(9)
-  &8
-    col(8)
-  &7
-    col(7)
-  &6
-    col(6)
-  &5
-    col(5)
-  &4
-    col(4)
-  &3
-    col(3)
-  &2
-    col(2)
-  &1
-    col(1)
-  &1f
-    width: (100% * 1/5)  
-  &2f
-    width: (100% * 2/5)
-  &3f
-    width: (100% * 3/5)
-  &4f
-    width: (100% * 4/5)
+  generate-cols()
 
 @media screen and (min-width: 768px)
   .s-sm-
-    &12
-      col(12)
-    &11
-      col(11)
-    &10
-      col(10)
-    &9
-      col(9)
-    &8
-      col(8)
-    &7
-      col(7)
-    &6
-      col(6)
-    &5
-      col(5)
-    &4
-      col(4)
-    &3
-      col(3)
-    &2
-      col(2)
-    &1
-      col(1)
-    &1f
-      width: (100% * 1/5)  
-    &2f
-      width: (100% * 2/5)
-    &3f
-      width: (100% * 3/5)
-    &4f
-      width: (100% * 4/5)
+    generate-cols()
 
 @media screen and (min-width: 1024px)
   .s-md-
-    &12
-      col(12)
-    &11
-      col(11)
-    &10
-      col(10)
-    &9
-      col(9)
-    &8
-      col(8)
-    &7
-      col(7)
-    &6
-      col(6)
-    &5
-      col(5)
-    &4
-      col(4)
-    &3
-      col(3)
-    &2
-      col(2)
-    &1
-      col(1)
-    &1f
-      width: (100% * 1/5)  
-    &2f
-      width: (100% * 2/5)
-    &3f
-      width: (100% * 3/5)
-    &4f
-      width: (100% * 4/5)
+    generate-cols()
 
 @media screen and (min-width: 1200px)
   .s-lg-
-    &12
-      col(12)
-    &11
-      col(11)
-    &10
-      col(10)
-    &9
-      col(9)
-    &8
-      col(8)
-    &7
-      col(7)
-    &6
-      col(6)
-    &5
-      col(5)
-    &4
-      col(4)
-    &3
-      col(3)
-    &2
-      col(2)
-    &1
-      col(1)
-    &1f
-      width: (100% * 1/5)  
-    &2f
-      width: (100% * 2/5)
-    &3f
-      width: (100% * 3/5)
-    &4f
-      width: (100% * 4/5)
+    generate-cols()
 
 @media screen and (min-width: 1700px)
   .s-xl-
-    &12
-      col(12)
-    &11
-      col(11)
-    &10
-      col(10)
-    &9
-      col(9)
-    &8
-      col(8)
-    &7
-      col(7)
-    &6
-      col(6)
-    &5
-      col(5)
-    &4
-      col(4)
-    &3
-      col(3)
-    &2
-      col(2)
-    &1
-      col(1)
-    &1f
-      width: (100% * 1/5)  
-    &2f
-      width: (100% * 2/5)
-    &3f
-      width: (100% * 3/5)
-    &4f
-      width: (100% * 4/5)
+    generate-cols()
