--- a/jade/sandbox.jade
+++ b/jade/sandbox.jade
@@ -147,6 +147,20 @@ block content
           a(href="#") Item
         li Item that is not a link.
         li
+          a(href="#") Item
+      ul.s-right
+        li
+          a(href="#") Item
+        li
+          a(href="#") Item
+    nav.s-box.s-grey
+      ul
+        li
+          a.s-box-heading(href="#") Website
+        li
+          a(href="#") Item
+        li Item that is not a link.
+        li
           a.s-btn(href="#") Item
         li
           a(href="#") Item
