--- a/stylus/components/box.styl
+++ b/stylus/components/box.styl
@@ -1,9 +1,26 @@
 .s-
   &box
-    padding-top: ($space/2)
-    padding-bottom: ($space/2)
+    padding-top: ($space/5)
+    padding-bottom: ($space/5)
     margin-bottom: $space
     border-radius(5px)
+    min-height: 50px
+    > *
+      vertical-align: middle
+      display: inline-block
+      margin-bottom: 0
+    > .s-wrapper
+      display: block
+    > ul, > .s-wrapper > ul
+      margin-left: $buttonSpacingH
+      > li
+        display: inline-block
+        margin-bottom: 0
+        margin-right: ($space/3)
+        > *
+          margin-bottom: 0
+      &.s-right
+        float:right
     &-caption
       &_left:not(img)
         overflow: hidden
@@ -13,7 +30,7 @@
         display: block
     p:last-child
       margin-bottom: 0
-    &:after, &:before
+    &:after
       content: ' '
       display: table
     &:after
@@ -25,43 +42,6 @@
     > .s-wrapper
       padding-top: 0
       padding-bottom: 0
-    > ul, > .s-wrapper > ul
-      margin-bottom: 0
-      display: block
-      float: left
-      > li
-        display: inline-block 
-        margin-bottom: 0
-        > *
-          display: inline-block
-        > a:not(.s-btn)
-          margin 0
-        > a:not(.s-btn), h1, h2, h3, h4, h5, p, strong, em
-          padding: $buttonSpacingV $buttonSpacingH
-          margin-top: (-1 * ($buttonSpacingV))
-          margin-bottom: (-1 * ($buttonSpacingV))
-        > .s-btn, input
-          margin-bottom: 0
-          + .s-btn, input
-            margin-left: ($space/5)
-        > .fa
-          margin-right: 0
-        > ul
-            display: none
-            margin: 0
-      &:first-child
-        > li:first-child
-         > .s-btn, input
-           margin-left: ($space/5)
-      &.s-right
-        > li:last-child
-         > .s-btn, input
-           margin-right: ($space/5)
-      &.s-right
-        float: right
-        > li
-          > .fa
-            margin-left: 0
     a:not(.s-btn):not(.s-close)
       color: $darkGrey
     &.s-fixed
