--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -5,6 +5,7 @@
       color: white
   &btn
     padding: $buttonSpacingV $buttonSpacingH
+    display: inline-block
     background-color: lightgray
     color: inherit
     border: 0px
