--- a/jade/index.jade
+++ b/jade/index.jade
@@ -299,7 +299,9 @@ block content
 
         p To contain the page in a nice, centered wrapper, use 
           code .s-wrapper
-        p This will have no effect for pages under 1200px. Screens larger than this will keep your site in a 1200px wrapper with equal spacing on the left and right.
+        p This will have no effect for pages under 1700px. Screens larger than this will keep your site in a 1700px wrapper with equal spacing on the left and right.
+        p For different sizes, add an additiona class with the form s-[size] where [size] is xs, sm, md, or lg.
+        pre &lt;div class=&quot;s-wrapper s-lg&quot;&gt;&lt;/div&gt;
 
         h2#growls Growls
         p Growls are unobtrusive pop up messages called via JavaScript. A basic call might look like this:
@@ -409,6 +411,28 @@ block content
           |   &lt;/div&gt;
           | &lt;/div&gt;
 
+        h2#progress Progress
+        p Use the default HTML5 
+          code progress
+          |  element with the 
+          code .s-box
+          |  class.
+        progress.s-box.s-3(value="30" max="100")
+        pre &lt;progress class="s-box s-3" value="30" max="100"&gt;&lt;/progress&gt;
+
+        p Add 
+          code .s-[color]
+          |  for alternate colors.
+        pre &lt;progress class="s-box s-red" value="30" max="100"&gt;&lt;/progress&gt;
+
+        progress.s-box.s-red(value="30" max="100")
+        progress.s-box.s-orange(value="30" max="100")
+        progress.s-box.s-yellow(value="30" max="100")
+        progress.s-box.s-green(value="30" max="100")
+        progress.s-box.s-blue(value="30" max="100")
+        progress.s-box.s-violet(value="30" max="100")
+
+
         h2#typography Typography
         p Typography relies mostly on standard HTML5 elements.
         p Use hx (where x = 1-5) for headings and p, etc for basic text formatting.
@@ -448,5 +472,7 @@ block content
               a(href="#growls") Growls
             li
               a(href="#images") Images
+            li
+              a(href="#progress") Progress
             li
               a(href="#typography") Typography
