--- a/jade/index.jade
+++ b/jade/index.jade
@@ -431,6 +431,8 @@ block content
         progress.s-box.s-green(value="30" max="100")
         progress.s-box.s-blue(value="30" max="100")
         progress.s-box.s-violet(value="30" max="100")
+        progress.s-box.s-white(value="30" max="100")
+        progress.s-box.s-blue.s-clear.s-bordered(value="30" max="100")
 
 
         h2#typography Typography
